public class Novojogo {
    public void novo(ControllerTela t){
    t.campo1.setDisable(false);
    t.campo1.setText("");
    t.campo1.setStyle("-fx-background-color: black; -fx-border-color: white; -fx-border-width: 1px");

    t.campo4.setDisable(false);
    t.campo4.setText("");
    t.campo4.setStyle("-fx-background-color: black; -fx-border-color: white; -fx-border-width: 1px");

    t.campo7.setDisable(false);
    t.campo7.setText("");
    t.campo7.setStyle("-fx-background-color: black; -fx-border-color: white; -fx-border-width: 1px");

    t.campo2.setDisable(false);
    t.campo2.setText("");
    t.campo2.setStyle("-fx-background-color: black; -fx-border-color: white; -fx-border-width: 1px");

    t.campo5.setDisable(false);
    t.campo5.setText("");
    t.campo5.setStyle("-fx-background-color: black; -fx-border-color: white; -fx-border-width: 1px");

    t.campo8.setDisable(false);
    t.campo8.setText("");
    t.campo8.setStyle("-fx-background-color: black; -fx-border-color: white; -fx-border-width: 1px");

    t.campo3.setDisable(false);
    t.campo3.setText("");
    t.campo3.setStyle("-fx-background-color: black; -fx-border-color: white; -fx-border-width: 1px");

    t.campo6.setDisable(false);
    t.campo6.setText("");
    t.campo6.setStyle("-fx-background-color: black; -fx-border-color: white; -fx-border-width: 1px");

    t.campo9.setDisable(false);
    t.campo9.setText("");
    t.campo9.setStyle("-fx-background-color: black; -fx-border-color: white; -fx-border-width: 1px");
}
}